# fuel-vm-benchmark

./: Cargo.toml  README.md
benches/: counter.rs  fibonacci.rs
src/: evm.rs  fuel_vm.rs  lib.rs  main.rs
src/bytecode/: evm.rs  fuel.rs  mod.rs
