[package]
name = "fuel-vm-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
fuel-vm = { git = "https://github.com/FuelLabs/fuel-vm.git", branch = "master", features = ["test-helpers"] }
revm = { git = "https://github.com/bluealloy/revm.git", branch = "main" }
serde = "1.0.217"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fibonacci"
harness = false
